fix demo button align

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -15,6 +15,10 @@
 #idLaunchApp {
   width: 12.25rem;
   height: 2.6875rem;
+
+  @media (max-width: 992px) {
+    margin-left: auto;
+  }
 }
 
 .bg-header {
